Fix JdkObsolete Error Prone errors by using Charset overloads
The newer Error Prone pulled in with rules_java 9.9.0 reports
JdkObsolete for the String-charset-name JDK APIs. Switch to the
Charset overloads (URLEncoder/URLDecoder, new String, new Scanner,
new InputStreamReader, ByteArrayOutputStream.toString,
String.getBytes). Where the charset was a StandardCharsets constant,
.name() is dropped; where it was dynamic, the name is resolved via
Charset.forName(...).

Charset.forName throws an unchecked exception for an invalid name,
whereas the String overloads threw checked UnsupportedEncodingException.
Resolving an untrusted charset name (e.g. a request charset) is
therefore factored into a small CharsetUtil helper that returns a
checked IOException for an unknown/illegal name and defaults a null
name to UTF-8.

Decoding the Basic Authorization header, shared between
ProjectBasicAuthFilter and ProjectOAuthFilter, is likewise moved into
a package-private BasicAuthHeader helper built on CharsetUtil.

Where the removed String overloads declared a now-inaccurate
"throws UnsupportedEncodingException", the declaration is dropped
(markdownToDocHtml, ProjectOAuthFilter.extractAuthInfo); no caller
catches it.

Release-Notes: skip
Change-Id: If2c31710fe462e0603eef46c6cdcecf3428db74e