@@ -19,7 +19,6 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import com.google.gerrit.common.Nullable;
 import com.google.inject.Inject;
 import com.google.inject.Provider;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import javax.servlet.http.HttpServletRequest;
 
@@ -37,18 +36,12 @@ public class CanonicalWebUrl {
     return url != null ? url : computeFromRequest(req);
   }
 
-  @SuppressWarnings("JdkObsolete")
   static String computeFromRequest(HttpServletRequest req) {
-    StringBuffer url = req.getRequestURL();
-    try {
-      url = new StringBuffer(URLDecoder.decode(url.toString(), UTF_8.name()));
-      url.setLength(url.length() - req.getServletPath().length());
-      if (url.charAt(url.length() - 1) != '/') {
-        url.append('/');
-      }
-      return url.toString();
-    } catch (UnsupportedEncodingException e) {
-      throw new IllegalStateException("Unsupported encoding for request URL " + url, e);
+    StringBuilder url = new StringBuilder(URLDecoder.decode(req.getRequestURL().toString(), UTF_8));
+    url.setLength(url.length() - req.getServletPath().length());
+    if (url.charAt(url.length() - 1) != '/') {
+      url.append('/');
     }
+    return url.toString();
   }
 }
